--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   }
+
+.App {
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+
+* {
+  font-family: 'Roboto Mono', monospace;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
+.container__counter-father {
+  width: 100vw;
+  height: 100vh;
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container__counter-child {
+  width:300px;
+  height:300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+h1 {
+  text-align: center;
+  font-size: 70px;
+  color: #B20600;
+  font-weight: bold;
+  font-family: 'Barlow', sans-serif;
+}
+
+.container__counter-buttons {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.container__counter-button {
+  margin: 5px;
+  width: 800px;
+  height:50px;
+  border: none;
+  color: #ffffff;
+  background-color: rgb(240, 165, 0);
+  border-radius: 15px;
+  font-size: 20px;
+  box-shadow: inset 0 0 0 0 #06113C;
+  transition: ease-out 0.3s;
+  font-weight: bold;
+  outline: none;
+}
+
+.container__counter-button:hover{
+  box-shadow: inset 800px 0 0 0 #06113C;
+}
+
+.container__counter-button:active {
+  transform:scale(0.70);
+}
+
+.negative{
+  color: #ED213A;
+  animation: pulse 0.5s ease-in-out;
+}
+
+.positive{
+  color: #11998e;
+  animation: pulse 0.5s ease-in-out;
+}
+
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: scale(1.2);
   }
 }
